[project]
name = "pyATS_MCP"
version = "1.0.0"
description = "pyATS MCP Server - Experimental"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.13.1",
    "pyats",
    "genie",
    "python-dotenv",
    "pydantic-settings"
]

[project.scripts]
pyats-mcp = "pyats_mcp.pyats_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyats_mcp"]